--- a/code_base/static/index2.html
+++ b/code_base/static/index2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic 8-Ball</title>
+    <!-- <link rel="stylesheet" href="/static/styles2.css"> -->
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
@@ -13,6 +14,7 @@
         <button onclick="shakeBall()">Shake</button>
         <div id="response"></div>
     </div>
+    <!-- <script src="/static/script2.js"></script> -->
     <script src="script2.js"></script>
 </body>
 </html>
